Spelling and test fixes.